adding environment to upstart script

--- a/facebookconnector.conf
+++ b/facebookconnector.conf
@@ -15,7 +15,7 @@ respawn limit 99 5
 script
     # Not sure why $HOME is needed, but we found that it is:
     export HOME="/root"
-
+	export NODE_ENV="production"
     exec /usr/local/bin/node /where/connector.js >> /var/log/nodeconnector.log 2>&1
 end script
 
